k8/ingress/go-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-server-ingress
  namespace: backend-applications
spec:
  rules:
    - host: kubernates-learning.com
      http:
        paths:
          - path: /go
            pathType: ImplementationSpecific
            backend:
              service:
                name: go-server-service
                port:
                  number: 7000
